manifests/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
  namespace: myweather
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: GEMINI_API_KEY
              valueFrom:
                secretKeyRef:
                  name: backend-secret
                  key: GEMINI_API_KEY
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  name: backend-configmap
                  key: PORT
            - name: REACT_APP_RAPIDAPI_KEY
              valueFrom:
                secretKeyRef:
                  name: backend-secret
                  key: REACT_APP_RAPIDAPI_KEY
          image: ghcr.io/vijai-veerapandian/myweather-backend:1.0
          name: myweather-backend
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
