manifests/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: myweather
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: ghcr.io/vijai-veerapandian/myweather-frontend:1.0
          name: myweather-frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
