manifests/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
  namespace: myweather
spec:
  ports:
    - name: "http"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: backend
