manifests/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: myweather
spec:
  ports:
    - name: "http"
      port: 9090
      targetPort: 80
  selector:
    io.kompose.service: frontend
